@@ -2093,13 +2093,15 @@ function geodir_listing_bounce_map_pin_on_hover(){
             ?>
             <script>
                 jQuery(function ($) {
-                    var groupTab = $("ul.geodir_category_list_view").children("li");
-                    groupTab.hover(function () {
-                        animate_marker('listing_map_canvas', String($(this).data("post-id")));
-                    }, function () {
-                        stop_marker_animation('listing_map_canvas', String($(this).data("post-id")));
+                    if (typeof(animate_marker) == 'function') {
+                        var groupTab = $("ul.geodir_category_list_view").children("li");
+                        groupTab.hover(function () {
+                            animate_marker('listing_map_canvas', String($(this).data("post-id")));
+                        }, function () {
+                            stop_marker_animation('listing_map_canvas', String($(this).data("post-id")));
 
-                    });
+                        });
+                    }
                 });
             </script>
 
